<resources>
    <string name="app_name" translatable="false">MyNoteEncrypted</string>
    <string name="copyright" translatable="false">©2017 &#8211; 2019 GuepardoApps (Jonas Schubert)</string>

    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="addPlus" translatable="false">+</string>
    <string name="back">Back</string>
    <string name="set_bubble_state">Activate floating notification</string>
    <string name="settings">Settings</string>

    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="new_note">New note</string>

    <string name="prompt">Prompt</string>
    <string name="ok">OK</string>
    <string name="neutral">Neutral</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="saved">Saved</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="hint">Enter your notes, please!</string>
    <string name="hint_add_title">Title of your note</string>
    <string name="hint_add_content">Add your note here</string>

    <string name="missingTitle">Please enter a title</string>
    <string name="missingNote">Please enter a note</string>

    <string name="unsavedChangesWarning">Warning! The created note is not saved! Do you want to save the note?</string>
    <string name="saveFailedToasty">Save failed</string>
    <string name="saveFailedDialog">Warning! Save failed! Try again or cancel?</string>
    <string name="updateFailedToasty">Update failed</string>
    <string name="deleteFailedToasty">Delete failed</string>

    <string name="short_example">Example</string>
    <string name="example">This is an example for a long and multiline sentence in this application.</string>

    <string name="login">Login</string>
    <string name="enterPasswordHint">Enter your password</string>
    <string name="firstLogin">First Login! Enter a password</string>
    <string name="passwordSelectionHint">Use at least one number, one lower char, one upper char and a sign! Length has to be between 8 and 64 signs! Remember your phrase! It cannot be changed later!</string>
    <string name="reenterPasswordHint">Reenter your password</string>

    <string name="passwordsNotMatch">Passwords do not match!</string>
    <string name="passwordNotValid">Password is not valid!</string>
    <string name="invalidPwDbDeleteWarning">Caution! You only have %d more tries! Then your data will be erased!</string>
    <string name="invalidPwDbDeleteHint">You entered %d times an invalid login! Your data was erased!</string>

    <string name="match">Match!</string>
    <string name="noMatch">No match!</string>

    <string name="weak">Weak</string>
    <string name="valid">Valid!</string>
    <string name="notValid">Not valid!</string>

    <string name="wrongLength">Wrong length!</string>
    <string name="tooLong">Too long!</string>
    <string name="tooShort">Too short!</string>

    <string name="contentDescription">This is a image</string>

    <string name="about">About</string>
    <string name="author_title">Author</string>
    <string name="author" translatable="false">Jonas Schubert\nGuepardoApps</string>
    <string name="version_title">Version</string>
    <string name="version" translatable="false">2.0.2.190810</string>
    <string name="email_title" translatable="false">Mail</string>
    <string name="email" translatable="false">guepardoapps@gmail.com</string>
    <string name="gitHubLink_title" translatable="false">GitHub</string>
    <string name="gitHubLink" translatable="false">https://github.com/GuepardoApps-Releases/MyNoteEncrypted/</string>
    <string name="homepageLink_title" translatable="false">Homepage</string>
    <string name="homepageLink" translatable="false">https://guepardoapps.github.io/</string>
    <string name="special_thanks_title" translatable="false">Special thanks</string>
    <string name="special_thanks" translatable="false">I want to thank my lovely wife for always supporting me and helping me to improve this application! நான் உன்னை காதலிக்கிறேன்</string>

    <string name="deleteRequest">Do you want to delete the note %s?</string>

    <string name="unknownError">Something went wrong!</string>
</resources>
