<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_shadow_start_color"
    android:padding="10dp">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="5dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/firstLogin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/PrimaryText"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:background="@color/SecondaryText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/passwordSelectionHint"
                android:textColor="@color/PrimaryText" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enterPasswordHint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/PrimaryText"
                android:textColorHint="@color/SecondaryText">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/passwordStrengthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:text="@string/weak"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/DarkRed"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordReenterInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/reenterPasswordHint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/PrimaryText"
                android:textColorHint="@color/SecondaryText" />

            <TextView
                android:id="@+id/passwordCheckTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:text="@string/noMatch"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/DarkRed"
                android:textStyle="bold" />

            <com.rey.material.widget.Button
                android:id="@+id/buttonSaveApplicationPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"
                android:textColor="@color/PrimaryText"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>