<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:padding="10dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/new_note"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/PrimaryText"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/notes"
                android:ems="10"
                android:hint="@string/hint_add_title"
                android:textColor="@color/PrimaryText"
                android:textColorHint="@color/SecondaryText" />

            <EditText
                android:id="@+id/addContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/addTitle"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/hint_add_content"
                android:inputType="textMultiLine"
                android:maxLines="25"
                android:minLines="6"
                android:scrollbars="vertical"
                android:textColor="@color/PrimaryText"
                android:textColorHint="@color/SecondaryText" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescription"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@android:drawable/ic_menu_save"
                app:fab_radius="17dp"
                app:rd_backgroundColor="@color/DarkPrimary"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorAccent"
                app:rd_rippleType="touch" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>