<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:padding="10dp">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/loginImageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_above="@+id/passwordInput"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/contentDescription"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/enterPasswordHint"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/PrimaryText"
                android:textColorHint="@color/SecondaryText">

                <requestFocus />
            </EditText>

            <com.rey.material.widget.Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordInput"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="@color/PrimaryText"
                android:textStyle="bold"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorPrimary"
                app:rd_rippleType="touch" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>