<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_start_color"
    android:padding="10dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <EditText
                android:id="@+id/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_toStartOf="@+id/btnShare"
                android:gravity="center"
                android:inputType="text"
                android:labelFor="@+id/detailTitle"
                android:padding="5dp"
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/PrimaryText"
                android:textStyle="bold" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescription"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@android:drawable/ic_menu_share"
                app:fab_radius="17dp"
                app:rd_backgroundColor="@color/DarkPrimary"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorAccent"
                app:rd_rippleType="touch" />

            <TextView
                android:id="@+id/detailDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detailTitle"
                android:layout_toStartOf="@+id/btnShare"
                android:text="@string/example"
                android:textColor="@color/SecondaryText"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/detailContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/btnEditSave"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/detailDateTime"
                android:layout_margin="5dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:labelFor="@+id/detailContent"
                android:padding="5dp"
                android:text="@string/content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/PrimaryText" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnEditSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescription"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@android:drawable/ic_menu_save"
                app:fab_radius="17dp"
                app:rd_backgroundColor="@color/DarkPrimary"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorAccent"
                app:rd_rippleType="touch" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescription"
                app:fab_iconSize="30dp"
                app:fab_iconSrc="@android:drawable/ic_menu_delete"
                app:fab_radius="17dp"
                app:rd_backgroundColor="@color/DarkRed"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/LightRed"
                app:rd_rippleType="touch" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>