<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_shadow_start_color"
    android:padding="10dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/cardview_light_background"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/itemDateTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dip"
                android:text="@string/short_example"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:textColor="@color/SecondaryText" />

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemDateTime"
                android:layout_margin="5dp"
                android:text="@string/short_example"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/PrimaryText" />

            <TextView
                android:id="@+id/itemContent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/itemTitle"
                android:layout_margin="5dp"
                android:padding="5dip"
                android:text="@string/example"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:textColor="@color/PrimaryText" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_toStartOf="@+id/btnDelete"
                android:contentDescription="@string/contentDescription"
                app:fab_iconSize="25dp"
                app:fab_iconSrc="@android:drawable/ic_menu_edit"
                app:fab_radius="14dp"
                app:rd_backgroundColor="@color/DarkPrimary"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/colorAccent"
                app:rd_rippleType="touch" />

            <com.rey.material.widget.FloatingActionButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescription"
                app:fab_iconSize="25dp"
                app:fab_iconSrc="@android:drawable/ic_menu_delete"
                app:fab_radius="14dp"
                app:rd_backgroundColor="@color/DarkRed"
                app:rd_delayClick="none"
                app:rd_enable="true"
                app:rd_rippleColor="@color/LightRed"
                app:rd_rippleType="touch" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>